fixed overflow-x: hidden bug

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,12 @@
+html,
 body {
   background: #130f40;
   overflow-x: hidden;
   scroll-behavior: smooth;
+}
+
+body {
+  position: relative;
 }
 
 .App {
